# baseballsim

./: .gitattributes  2020 2021 2022 2023 2024 2025 2026 historical-Batting.csv  2020 2021 2022 2023 2024 2025 2026 historical-Pitching.csv  2020 2021 2022 2023 2024 2025 2026 player-projected-stats-pp-Batting.csv  2020 2021 2022 2023 2024 2025 2026 player-projected-stats-pp-Pitching.csv  2020 player-stats-Batters.csv  2020 player-stats-Pitching.csv  2021 player-stats-Batters.csv  2021 player-stats-Pitching.csv  2022 2023 2024 stats-pp-Batting.csv  2022 2023 2024 stats-pp-Pitching.csv  2022 player-stats-Batters.csv  2022 player-stats-Pitching.csv  2022 random-player-stats-Batters.csv  2022 random-player-stats-Pitching.csv  2023 2024 2025 2026 historical-Batting.csv  2023 2024 2025 2026 historical-Pitching.csv  2023 2024 2025 2026 player-projected-stats-pp-Batting.csv  2023 2024 2025 2026 player-projected-stats-pp-Pitching.csv  2023 2024 2025 aggr-stats-pp-Batting.csv  2023 2024 2025 aggr-stats-pp-Pitching.csv  2023 2024 2025 historical-Batting.csv  2023 2024 2025 historical-Pitching.csv  2023 2024 2025 player-projected-stats-pp-Batting.csv  2023 2024 2025 player-projected-stats-pp-Pitching.csv  2023 2024 2025 stats-pp-Batting.csv  2023 2024 2025 stats-pp-Pitching.csv  2023 player-stats-Batters.csv  2023 player-stats-Pitching.csv  2023 random-stats-pp-Batting.csv  2023 random-stats-pp-Pitching.csv  2023 stats-pp-Batting.csv  2023 stats-pp-Pitching.csv  2024 New-Season-random-stats-pp-Batting.csv  2024 New-Season-random-stats-pp-Pitching.csv  2024 New-Season-stats-pp-Batters.csv  2024 New-Season-stats-pp-Batting.csv  2024 New-Season-stats-pp-Pitching.csv  2024 player-stats-Batters.csv  (+78 more)
ui/: __init__.py  (+7 more)
(+20 files in other folders)
