[project]
name = "baseballsimgit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.1.0",
    "pandas>=2.3.3",
    "loguru>=0.7.3",
    "keyboard>=0.13.5",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pydantic==2.13.0b3",
]

[tool.uv.workspace]
members = [
    "bbvenv_314t_20260414",
    "bbvenv314t_2026_04_14",
]
