[project]
name = "baseballsimgit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.1.0",
    "pandas>=2.3.3",
    "loguru>=0.7.3",
    "keyboard>=0.13.5",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pydantic==2.13.0b3",
    "ruff>=0.15.10",
]

[tool.uv.workspace]
members = [
    "bbvenv_314t_20260414",
    "bbvenv314t_2026_04_14",
]

[tool.ruff]
# Increase this to 100 or 120 to give horizontal lists more "room"
line-length = 120

[tool.ruff.lint]
# Disable the rule that forces trailing commas
ignore = ["COM812", "ISC001"]

[tool.ruff.format]
# This tells the formatter: "Ignore the trailing comma
# and collapse the list if it fits within the line length."
skip-magic-trailing-comma = true